RESOLVED FIXED219264
[WPE][GTK] Fix build with GCC 11
https://bugs.webkit.org/show_bug.cgi?id=219264
Summary [WPE][GTK] Fix build with GCC 11
Michael Catanzaro
Reported 2020-11-23 15:12:20 PST
WTFGType is using volatile improperly when defining the get_type() macro, because the code is copied from GLib, which had the same bug. See: https://gitlab.gnome.org/GNOME/glib/-/issues/600#note_877282
Attachments
Patch (1.98 KB, patch)
2020-11-23 15:14 PST, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2020-11-23 15:14:45 PST
Michael Catanzaro
Comment 2 2020-11-23 15:19:01 PST
Honestly I'm not sure why this is a hard build failure. It causes a -Wincompatible-pointer-types warning. Maybe the compiler people decided to test a build with -Werror=incompatible-pointer-types enabled? Regardless, it's nice to see such problems pop up early, rather than waiting until after GCC 11 hits Fedora next year....
EWS
Comment 3 2020-11-26 15:56:47 PST
Committed r270166: <https://trac.webkit.org/changeset/270166> All reviewed patches have been landed. Closing bug and clearing flags on attachment 414813 [details].
Note You need to log in before you can comment on or make changes to this bug.