[WPE][GTK] Fix build with GCC 11 https://bugs.webkit.org/show_bug.cgi?id=219264

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-11-26
Reviewed by Carlos Garcia Campos.

It's not uncommon for really old code like this to abuse volatile as if it were a
synchronization primitive. It's not. This code is already synchronized by use of GOnce, so
it can be safely removed. References:

https://gitlab.gnome.org/GNOME/glib/-/issues/600#note_877282
http://isvolatileusefulwiththreads.in/C++/

* wtf/glib/WTFGType.h:

Canonical link: https://commits.webkit.org/231875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270166 268f45cc-cd09-0410-ab3c-d52691b4dbfc